[gd_scene load_steps=17 format=3 uid="uid://dl6vqmuu804oc"]

[ext_resource type="Script" path="res://scripts/server.gd" id="1_iym70"]
[ext_resource type="Texture2D" uid="uid://ddw53s0vlshw" path="res://ATS-S/assets/icon (Custom).png" id="1_o7qkv"]
[ext_resource type="Texture2D" uid="uid://cjrgpvf2qau18" path="res://ATS-S/assets/icon_INOP (Custom).png" id="3_dalr6"]
[ext_resource type="Script" path="res://scripts/ats_s.gd" id="4_12aw2"]
[ext_resource type="Texture2D" uid="uid://dr7q5id583e36" path="res://ATS-Ps/assets/icon (Custom).png" id="5_pvvx2"]
[ext_resource type="Texture2D" uid="uid://bm7sfftk1ixl5" path="res://ATS-Ps/assets/icon_INOP (Custom).png" id="6_1sgmq"]
[ext_resource type="Texture2D" uid="uid://cha541t8nc2u6" path="res://ATS-P/assets/icon (Custom).png" id="7_6k4lh"]
[ext_resource type="Texture2D" uid="uid://dl34jk3e5gqjj" path="res://ATS-P/assets/icon_INOP (Custom).png" id="8_xtb8p"]
[ext_resource type="Script" path="res://scripts/save.gd" id="9_rvkf8"]
[ext_resource type="Texture2D" uid="uid://dtdkmccpkytin" path="res://assets/banner.png" id="9_usuam"]
[ext_resource type="Script" path="res://scripts/language.gd" id="11_qu0kt"]
[ext_resource type="Texture2D" uid="uid://cbvfda7jahf80" path="res://assets/translation.png" id="11_tf4cp"]
[ext_resource type="Script" path="res://scripts/confirm_info.gd" id="12_qinf2"]
[ext_resource type="Script" path="res://scripts/copyright.gd" id="14_xvmjn"]
[ext_resource type="Script" path="res://scripts/news_request.gd" id="15_4f64g"]
[ext_resource type="Script" path="res://scripts/request_servers.gd" id="16_usu0l"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Server" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 371.0
offset_top = 188.0
offset_right = 438.438
offset_bottom = 219.0
flat = true
text_overrun_behavior = 1
fit_to_longest_item = false
script = ExtResource("1_iym70")

[node name="TrainNumber" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 509.0
offset_top = 187.0
offset_right = 629.0
offset_bottom = 218.0
placeholder_text = "Train Number"
max_length = 6

[node name="ATS-S" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 327.0
offset_right = 248.0
offset_bottom = 455.0
disabled = true
texture_normal = ExtResource("1_o7qkv")
texture_disabled = ExtResource("3_dalr6")
script = ExtResource("4_12aw2")

[node name="ATS-Ps" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 318.0
offset_top = 326.0
offset_right = 446.0
offset_bottom = 454.0
disabled = true
texture_normal = ExtResource("5_pvvx2")
texture_disabled = ExtResource("6_1sgmq")

[node name="ATS-P" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 510.0
offset_top = 327.0
offset_right = 638.0
offset_bottom = 455.0
disabled = true
texture_normal = ExtResource("7_6k4lh")
texture_disabled = ExtResource("8_xtb8p")

[node name="Save" type="Button" parent="."]
layout_mode = 0
offset_left = 659.0
offset_top = 188.0
offset_right = 703.0
offset_bottom = 219.0
text = "Save"
script = ExtResource("9_rvkf8")

[node name="Banner" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 330.0
offset_top = 110.0
offset_right = 2030.0
offset_bottom = 286.0
scale = Vector2(0.251848, 0.251848)
texture_normal = ExtResource("9_usuam")

[node name="Language" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 30.0
offset_bottom = 30.0
texture_normal = ExtResource("11_tf4cp")
script = ExtResource("11_qu0kt")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
initial_position = 2
dialog_autowrap = true
script = ExtResource("12_qinf2")

[node name="version" type="LinkButton" parent="."]
layout_mode = 0
offset_left = 1091.0
offset_top = 625.0
offset_right = 1150.0
offset_bottom = 648.0
text = "v0.0.9.0"
uri = "Updater.exe"

[node name="copyright" type="LinkButton" parent="."]
layout_mode = 0
offset_top = 625.0
offset_right = 389.0
offset_bottom = 648.0
text = "Copyright Â© 2024 rinnyanneko. All rights reserved."
script = ExtResource("14_xvmjn")

[node name="news" type="ConfirmationDialog" parent="."]
mode = 1
initial_position = 1
size = Vector2i(400, 200)

[node name="RichTextLabel" type="RichTextLabel" parent="news"]
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 151.0
bbcode_enabled = true

[node name="news_request" type="HTTPRequest" parent="."]
use_threads = true
timeout = 3.0
script = ExtResource("15_4f64g")

[node name="RequestServers" type="HTTPRequest" parent="."]
script = ExtResource("16_usu0l")

[connection signal="pressed" from="ATS-S" to="ATS-S" method="_on_pressed"]
[connection signal="pressed" from="Save" to="Server" method="_on_save_button_pressed"]
[connection signal="pressed" from="Save" to="Save" method="_on_pressed"]
[connection signal="pressed" from="Banner" to="ConfirmationDialog" method="_on_banner_pressed"]
[connection signal="pressed" from="Language" to="Server" method="_on_language_pressed"]
[connection signal="pressed" from="Language" to="Language" method="_on_pressed"]
[connection signal="canceled" from="ConfirmationDialog" to="ConfirmationDialog" method="_on_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="ConfirmationDialog" method="_on_confirmed"]
[connection signal="pressed" from="version" to="version" method="_on_pressed"]
[connection signal="pressed" from="copyright" to="copyright" method="_on_pressed"]
[connection signal="canceled" from="news" to="news_request" method="_on_news_canceled"]
[connection signal="confirmed" from="news" to="news_request" method="_on_news_confirmed"]
[connection signal="meta_clicked" from="news/RichTextLabel" to="news_request" method="_on_rich_text_label_meta_clicked"]
[connection signal="request_completed" from="news_request" to="news_request" method="_on_request_completed"]
[connection signal="request_completed" from="RequestServers" to="RequestServers" method="_on_request_completed"]
